Landing Page 05/style.scss
// GOOGLE FONT IMPORT
@import url("https://fonts.googleapis.com/css2?family=Commissioner:wght@100..900&display=swap");

// FONT
$font-commissioner: "Commissioner", sans-serif;

// COLORS
$moderate-cyan: hsl(176, 50%, 47%);
$dark-cyan: hsl(176, 72%, 28%);
$black: hsl(0, 0%, 0%);
$dark-gray: hsl(0, 0%, 48%);
$very-light-gray-white: hsl(0, 0%, 98%);
$light-gray: hsl(0, 0%, 81%);
$white: hsl(0, 0%, 100%);

// CSS RESET

html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

* {
  margin: 0;
  padding: 0;
}

// BODY

body {
  font-family: $font-commissioner;
  background-color: $very-light-gray-white;
  color: $black;
}

// MENUS TOGGLER
.expanded {
  opacity: 1;
  pointer-events: auto;
  transition: max-height 0.3s ease-in, opacity 0.5s ease-in,
    transform 0.3s ease-in;
  max-height: 120px;
  transform: translateY(0);
}

.collapsed {
  transition: max-height 0.3s ease-in, opacity 50ms ease-in,
    transform 0.3s ease-in;
  transform: translateY(-10px);
  opacity: 0;
  max-height: 0;
  pointer-events: none;
}

.show {
  opacity: 1;
  pointer-events: auto;
  // transform: translateX(0);
  transition: opacity 0.1s ease-in 0.1s, visibility 0.1s linear 0.1s;
}

.not-show {
  opacity: 0;
  pointer-events: none;
  // transform: translateX(100%);
}

// MAIN

main {
  header {
    position: relative;
    background-image: url("/images/image-hero-mobile.jpg");
    background-size: cover;
    min-height: 46vh;

    .primary-nav {
      width: 100%;
      max-width: 1200px;
      padding: 30px;
      position: relative;
      display: flex;
      justify-content: space-between;

      .logo {
        img {
          width: 150px;
        }
      }

      .mobile-nav {
        button {
          background-color: transparent;
          border: none;
          cursor: pointer;

          svg {
            width: 25px;
            height: 25px;
            path {
              transform: scale(1.5);
            }
          }
        }
      }

      .desktop-nav {
        display: none;
      }
    }

    .overlay {
      position: fixed;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background-color: rgba(0, 0, 0, 0.5);
      z-index: 1;
      transition: opacity 0.1s ease-in-out 0.1s;
    }

    .secondary-nav {
      background-color: $very-light-gray-white;
      border-radius: 15px;
      margin: 0 25px;
      box-shadow: 0 12px 12px rgba(0, 0, 0, 0.233);
      ul {
        li {
          position: relative;
          list-style: none;
          padding: 32px 0;
          a {
            position: relative;
            bottom: 0.8rem;
            text-decoration: none;
            color: $black;
            font-size: 1.2rem;
            padding: 0 25px;
            font-weight: bold;
          }
          &:not(:last-child)::after {
            content: "";
            position: absolute;
            margin-top: 4.4rem;
            top: 0;
            left: 0;
            width: 100%;
            border-bottom: 1px solid $light-gray;
          }
        }
      }
    }

    .primary-nav,
    .secondary-nav {
      position: relative;
      z-index: 2;
    }
  }

  section {
    position: relative;
    background-color: $white;
    padding: 25px;
    width: 100%;
    max-width: 373px;
    border-radius: 5px;
    margin: 10px;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 10px auto;

    &.main-section {
      margin: -2rem auto;

      figure {
        position: relative;
        img {
          position: absolute;
          bottom: 0;
          left: -1.5rem;
        }
      }

      p {
        color: $dark-gray;
        line-height: 1.6rem;
        font-weight: 500;
      }

      h1,
      p {
        text-align: center;
        padding-top: 1rem;
      }

      .main-section-cta {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        gap: 20px;
        margin-top: 1rem;
        margin-bottom: 10px;

        button {
          border: 1px solid transparent;
          background-color: $moderate-cyan;
          color: $very-light-gray-white;
          cursor: pointer;

          &:not(.bookmark) {
            width: 233px;
            height: 50px;
            border-radius: 30px;
            font-weight: bold;
          }

          &.bookmark {
            background-color: transparent;
            position: relative;
            bottom: 10px;
          }
        }
      }
    }
  }
}

// MEDIA QUERY (TABLET / DESKTOP)

@media only screen and (min-width: 1024px) {
  main {
    header {
      background-image: url("/images/image-hero-desktop.jpg");

      .primary-nav {
        width: 100%;
        max-width: 1800px;
        padding: 25px;

        .mobile-nav {
          display: none;
          button {
            background-color: transparent;
            border: none;
            cursor: pointer;
          }
        }

        .desktop-nav {
          display: block;
          ul {
            display: flex;
            gap: 20px;
            li {
              list-style: none;
              padding: 10px 0;
              a {
                text-decoration: none;
                color: $very-light-gray-white;
                font-size: 1rem;
              }
            }
          }
        }
      }
    }
  }
}

